// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawerOverlay /> renders correctly when closed 1`] = `
<div
  className="DrawerOverlay"
  onClick={null}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0)",
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "transition": "background-color .2s ease-in-out, width 0s .2s",
      "width": "20px",
      "zIndex": 1,
    }
  }
/>
`;

exports[`<DrawerOverlay /> renders correctly when open 1`] = `
<div
  className="DrawerOverlay"
  onClick={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.6)",
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "transition": "background-color .2s ease-in-out, width 0s 0s",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;

exports[`<DrawerOverlay /> renders correctly when swiping 1`] = `
<div
  className="DrawerOverlay"
  onClick={null}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.3)",
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "transition": "",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;
